<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/include"
            layout="@layout/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:contentDescription="@string/description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder"
            android:background="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <ImageView
            android:id="@+id/bt_favorite"
            android:layout_width="@dimen/icon_favorite"
            android:layout_height="@dimen/icon_favorite"
            android:src="@drawable/ic_favorite_unselect"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="@+id/img_banner"
            app:layout_constraintEnd_toEndOf="@+id/img_banner"
            android:contentDescription="@string/description" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/CardViewTheme"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:layout_marginTop="@dimen/poster_margin_top_offset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_banner">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_extra_small">
                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/description" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textAppearance="@style/TextView.ExtraBigBold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/img_banner"
            tools:text="@string/title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/margin_big"
                android:layout_height="@dimen/margin_big"
                android:contentDescription="@string/description"
                android:src="@drawable/ic_stars" />

            <TextView
                android:id="@+id/tv_rating"
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="@string/title" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_overview"
            style="@style/TextView.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:text="@string/description" />

        <View
            android:layout_width="@dimen/divider_width"
            android:layout_height="@dimen/divider"
            android:layout_marginTop="@dimen/margin_extra_big"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>