<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_movie"
        android:checked="true"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie" />
    <item
        android:id="@+id/action_tvshow"
        android:icon="@drawable/ic_tvshow"
        android:title="@string/tvshow" />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/lbl_favorite"
        android:icon="@drawable/ic_favorite"/>
</menu>
