<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="no_internet_connection">Masalah jaringan, cek koneksi internet Anda dan silakan coba lagi</string>
    <string name="server_under_maintenance">Server sedang dalam pemeliharaan</string>
    <string name="cannot_connect_toserver">Tidak dapat berkomunikasi dengan server, coba beberapa saat lagi</string>

    <string name="load_data">Memuat data…</string>
    <string name="movie">Film</string>
    <string name="tvshow">TV Tayang</string>
    <string name="lbl_favorite">Favorit</string>

    <string name="movie_favorite">Film Favorit</string>
    <string name="tvshow_favorite">TV Tayang Favorit</string>

    <string name="title">Judul</string>
    <string name="description">Keterangan</string>

    <string name="vote_count">(%s suara)</string>

</resources>
